<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.holamundo.taller1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="87dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calzadodeportivo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombres_completos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/apellidos_completos"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escoge_tu_zapato"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_zapato"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbTipoDeZapato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnComprar"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="comprar"
                android:text="@string/comprar" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:text="@string/borrar" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
